# anisync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
src/: api.rs  config.rs  fs_store.rs  main.rs  sync.rs
src/config/: mega_config.rs  search_filters.rs  sync_dir.rs
src/sync/: filtering.rs  local.rs  mega.rs  mod.rs
src/sync/mega/: sys.rs
src/sync/mega/sys/: unix.rs  windows.rs
src/sync/sys/: mod.rs  unix.rs  windows.rs
www/: README.md  index.html  package-lock.json  package.json  vite.config.ts
www/src/: App.vue  AppSettings.vue  main.ts
www/src/app-settings/: ApiModels.ts  Config.vue  Filters.vue  SyncFolders.vue
