[package]
name = "anisync"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Sync media with different storages"
homepage = "https://github.com/anigelo/anisync"
documentation = "https://docs.rs/anisync"
repository = "https://github.com/anigelo/anisync"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "anisync"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
cfg-if = "1.0.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
relative-path = { version = "1.7", features = ["serde"]}
file-owner = "0.1.1"